vcluster_versioned_docs/version-0.34.0/configure/vcluster-yaml/control-plane/components/coredns.mdx
---
title: CoreDNS
sidebar_label: coredns
sidebar_position: 3
sidebar_class_name: free host-nodes
description: Configure CoreDNS.
---

import CoreDNS from '../../../../_partials/config/controlPlane/coredns.mdx'
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";

import TenancySupport from '../../../../_fragments/tenancy-support.mdx';
import FeatureTable from '@site/src/components/FeatureTable';

<FeatureTable names="vcp-distro-built-in-coredns" />






Each tenant cluster runs its own DNS service using CoreDNS. This allows pods and services inside the tenant cluster to discover each other using standard Kubernetes DNS names such as `my-service.default.svc.cluster.local`. The syncer syncs the services necessary for DNS to function as expected.

This setup means that applications inside the tenant cluster cannot resolve names for services that only exist in the control plane cluster. Similarly, pods in the control plane cluster cannot discover services that only exist inside a tenant cluster. DNS resolution works entirely within the boundaries of the tenant cluster unless you configure external mappings explicitly.

:::note
CoreDNS in the tenant cluster listens on port 1053, not the DNS port 53. This avoids privilege issues, especially when multiple tenant clusters run on the same control plane cluster. Port 53 is a privileged port and typically requires elevated permissions to bind. Blocked access to port 1053 prevents DNS resolution within the tenant cluster.
:::

## Deployment types

CoreDNS can deploy in two methods, either as a separate pod (default) or CoreDNS components can be embedded as part of the vCluster control plane pod. 
Each deployment type affects how the DNS service operates, how many pods the tenant cluster requires, and whether users can access and customize 
the CoreDNS configuration from inside the tenant cluster.

| Deployment Type         | Pod count per replica | Editable from tenant cluster | Corefile customization | Notes                              |
|-------------------------|-----------------------|-------------------------------|------------------------|------------------------------------|
| Separate (_Default_)   | 2                     | Yes                           | Yes                    | CoreDNS runs as a Deployment       |
| Embedded  | 1                     | No                            | No                     | CoreDNS runs inside the syncer container in the vCluster control plane pod |


### Deploy separate CoreDNS

By default, vCluster creates a dedicated CoreDNS pod. The tenant cluster deployment includes two pods: one pod for the API server and syncer, and another for CoreDNS.

CoreDNS is deployed as a standard Kubernetes deployment inside the tenant cluster. Users can view and modify the CoreDNS deployment using standard Kubernetes tools. DNS configuration is accessible, and you can apply changes or troubleshoot without restarting the tenant cluster's control plane.

:::note Configuration Persistence
Configuration changes applied directly to CoreDNS are not persistent. They get overwritten when the vCluster control plane pod restarts and the original `vcluster.yaml` configuration is re-applied.
:::

### Deploy embedded CoreDNS
<TenancySupport hostNodes="true" />

The embedded CoreDNS feature allows you to run CoreDNS as part of the syncer, which saves the resources of an external CoreDNS pod. This consolidates all tenant cluster components into a single pod and optimizes resource allocation. It also enables advanced DNS features like custom hostname mapping, cross-vCluster service resolution, and communication with control plane cluster services.

The embedded approach requires consideration of operational trade-offs. Troubleshooting becomes more complex since DNS and sync functions share the same container and process space. Updates and restarts affect both DNS and sync capabilities simultaneously, though all CoreDNS features remain supported.


## Example

The configuration you choose depends on your deployment model. The following examples show how to configure CoreDNS for each supported mode.

<Tabs>
<TabItem value="separate" label="Separate (Default)" default>

### Basic CoreDNS configuration

```yaml title="Basic CoreDNS configuration"
controlPlane:
  coredns:
    enabled: true
    deployment:
      replicas: 1
      resources:
        requests:
          cpu: 20m
          memory: 32Mi
        limits:
          cpu: 100m
          memory: 128Mi
```

### Private registry CoreDNS configuration

CoreDNS runs as a synced workload on the control plane cluster, so its image is
pulled using the vCluster workload service account. To pull the CoreDNS image
from a private registry, set the pull secret on
`controlPlane.advanced.workloadServiceAccount.imagePullSecrets`. The CoreDNS
deployment has no pull-secret field of its own.

```yaml title="Private registry CoreDNS configuration"
controlPlane:
  coredns:
    deployment:
      image: "registry.company.com/coredns"
  advanced:
    workloadServiceAccount:
      imagePullSecrets:
        - name: company-registry-credentials
```

:::note
`controlPlane.advanced.serviceAccount.imagePullSecrets` also reaches the
CoreDNS image pull, because vCluster merges both service accounts' pull secrets
onto the workload service account. Use `workloadServiceAccount` for pull secrets
that apply to synced workloads. If `sync.toHost.serviceAccounts.enabled` is `true`, CoreDNS uses its own synced service account instead, and the pull secret belongs there.
:::

### Custom CoreDNS configuration

```yaml title="Custom CoreDNS configuration"
controlPlane:
  coredns:
    overwriteConfig: |
      .:1053 {
          errors
          health
          ready
          kubernetes cluster.local in-addr.arpa ip6.arpa {
              pods insecure
              fallthrough in-addr.arpa ip6.arpa
              ttl 30
          }
          prometheus :9153
          forward . /etc/resolv.conf
          cache 30
          loop
          reload
      }
```
</TabItem>
<TabItem value="embedded" label="Embedded">

### Embedded CoreDNS configuration

<TenancySupport hostNodes="true" />

```yaml title="Embedded CoreDNS configuration"
controlPlane:
  coredns:
    enabled: true
    embedded: true
```

</TabItem>
</Tabs>


## Config reference

| Deprecated Field | New Field |
| ----------------- | ---------------- |
| `coredns.config` | `coredns.overwriteConfig` |
| `coredns.manifests` | `coredns.overwriteManifests` |


<CoreDNS/>

